--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,9 +12,9 @@
           <p class="text-sm text-zinc-400">Connected Wallet</p>
           <p class="text-zinc-200 font-mono break-all">{{ walletService.walletAddress() }}</p>
           <p class="text-sm text-zinc-400 mt-3">Network</p>
-          <p class="text-zinc-200 font-bold">{{ currentChainId === 'KAMI_TEST' ? 'Kami Test' : 'Zaar' }}</p>
+          <p class="text-zinc-200 font-bold">{{ currentChainId === 'YOMINET' ? 'Yominet' : 'Zaar' }}</p>
           <p class="text-sm text-zinc-400 mt-3">Balance</p>
-          <p class="text-zinc-200 font-bold">{{ walletService.balance() }} {{ currentChainId === 'KAMI_TEST' ? 'ETH' : 'Init' }}</p>
+          <p class="text-zinc-200 font-bold">{{ walletService.balance() }} {{ currentChainId === 'YOMINET' ? 'ETH' : 'Init' }}</p>
         </div>
 
         <!-- NFT Listing Form -->
