add buy to pool page

--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -57,7 +57,7 @@
                           Buying...
                         </span>
                       } @else {
-                        Buy First NFT
+                        Buy NFT
                       }
                     </button>
                   </div>
